<resources>
    <string name="app_name">BandApp</string>
    <string name="add_new_event_string">Add new event...</string>
    <string name="add_event_type_label">Select event type</string>
    <string name="add_event_location_label">Select event location</string>
    <string name="rehearsal_radio_button">Rehearsal</string>
    <string name="concert_radio_button">Concert</string>
    <string name="location_edit_text">Enter location...</string>
    <string name="time_and_date_label">Select time and date for event</string>
    <string name="end_time_label">End time</string>
    <string name="no_date_set">No date set</string>
    <string name="no_time_set">No time set</string>
    <string name="choose_date">Choose a date</string>
    <string name="choose_time">Choose a time</string>
    <string name="cancel_button">Cancel</string>
    <string name="submit_button">Submit</string>
    <string name="title_activity_add_event">Add new event</string>
    <string name="title_activity_view_event">View event</string>
    <string name="title_activity_event_list">Event list</string>
    <string name="title_activity_add_user_name">New user name</string>
    <string name="title_activity_edit_user_name">New user name</string>
    <string name="title_activity_edit_event">New user name</string>
    <string name="title_activity_parts_list">Parts</string>
    <string name="title_activity_display_sheet_music">Sheet music</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_add">Add</string>
    <string name="action_delete">Delete</string>
    <string name="action_remove">Remove</string>
    <string name="action_edit">Edit</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_edit_type">Change type</string>
    <string name="action_edit_username">Edit username</string>
    <string name="add_user_name_label">Add a new user name:</string>
    <string name="edit_user_name_label">Edit user name:</string>
    <string name="title_activity_event_manager">EventManagerActivity</string>
    <string name="add_food_responsible_edit_text">Name</string>
    <string name="add_food_responsible_label">Add food responsible</string>
    <string name="food_responsible_list_label">Food responsible</string>
    <string name="report_absence">Report absence</string>
    <string name="absent_text">Absent</string>
    <string name="edit_event_add_absent_hint">Name</string>
    <string name="edit_event_remove_absent_hint">Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
