<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/content_margin">

        <!--type control-->
        <TextView
            android:id="@+id/typeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/add_event_type_label"
            android:textSize="@dimen/add_event_heading_text_size"/>

        <RadioGroup
            android:id="@+id/typeGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/typeLabel"
            android:layout_marginTop="@dimen/heading_to_control_margin">

            <RadioButton
                android:id="@+id/rehearsalRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/rehearsal_radio_button" />

            <RadioButton
                android:id="@+id/concertRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/concert_radio_button" />
        </RadioGroup>

        <!--location control-->
        <TextView
            android:id="@+id/locationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/typeGroup"
            android:layout_marginTop="@dimen/add_event_section_margin"
            android:text="@string/add_event_location_label"
            android:textSize="@dimen/add_event_heading_text_size"/>

        <EditText
            android:id="@+id/locationEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/locationLabel"
            android:layout_marginTop="@dimen/heading_to_control_margin"
            android:ems="10"
            android:hint="@string/location_edit_text"
            android:inputType="text"
            android:imeOptions="actionDone">
        </EditText>

        <!--time and date control-->
        <TextView
            android:id="@+id/timeAndDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/locationEditText"
            android:layout_marginTop="@dimen/add_event_section_margin"
            android:text="@string/time_and_date_label"
            android:textSize="@dimen/add_event_heading_text_size"/>

        <!--Pick time control-->
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/dateContainer"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@+id/timeAndDateLabel"
            android:layout_marginTop="@dimen/heading_to_control_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dateLabel"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="@string/no_date_set" />

            <Button
                android:id="@+id/datePickerButton"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/choose_date" />

        </LinearLayout>

        <!--Pick date control-->
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/timeContainer"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@+id/dateContainer"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/timeLabel"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="@string/no_time_set" />

            <Button
                android:id="@+id/timePickerButton"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/label_to_button_margin"
                android:text="@string/choose_time" />

        </LinearLayout>

        <!--Add food responsible control-->

        <TextView
            android:id="@+id/addFoodResponsibleLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/timeContainer"
            android:layout_marginTop="@dimen/add_event_section_margin"
            android:text="@string/add_food_responsible_label"
            android:textSize="@dimen/add_event_heading_text_size"/>

        <LinearLayout
            android:id="@+id/addFoodResponsibleLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addFoodResponsibleLabel"
            android:layout_marginTop="@dimen/heading_to_control_margin"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/addFoodResponsibleEditText"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/add_food_responsible_edit_text"
                android:inputType="text"
                android:imeOptions="actionDone">
            </EditText>

            <Button
                android:id="@+id/addFoodResponsibleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_add" />

        </LinearLayout>

        <TextView
            android:id="@+id/foodResponsibleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addFoodResponsibleLinearLayout"/>

        <!-- Buttons -->

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="25dp"
            android:text="@string/cancel_button" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/submit_button" />
    </RelativeLayout>

</LinearLayout>