<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_event"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="se.mathenri.bandapp.EditEventActivity"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/edit_event_content_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/content_margin"
            android:orientation="vertical">

            <!--type-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/edit_event_type"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/edit_event_type_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_edit_type"/>

            </LinearLayout>

            <!--date-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/edit_event_date"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"/>

                <Button
                    android:id="@+id/edit_event_date_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_date"/>

            </LinearLayout>

            <!--time-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/edit_event_time"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"/>

                <Button
                    android:id="@+id/edit_event_time_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_time"/>

            </LinearLayout>

            <!--location-->
            <EditText
                android:id="@+id/edit_event_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:inputType="text"
                android:imeOptions="actionDone" />

            <!--absent-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/absent_text"
                android:layout_marginTop="2dp"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/edit_event_absent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_event_add_absent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:inputType="text"
                    android:imeOptions="actionDone"
                    android:hint="@string/edit_event_add_absent_hint"/>

                <Button
                    android:id="@+id/edit_event_add_absent_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_add"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_event_remove_absent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:inputType="text"
                    android:imeOptions="actionDone"
                    android:hint="@string/edit_event_remove_absent_hint"/>

                <Button
                    android:id="@+id/edit_event_remove_absent_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_remove"/>
            </LinearLayout>

            <!--food responsible-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/food_responsible_list_label"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_event_add_food_responsible"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:inputType="text"
                    android:imeOptions="actionDone"
                    android:hint="@string/edit_event_add_absent_hint"/>

                <Button
                    android:id="@+id/edit_event_add_food_responsible_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_add"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_event_remove_food_responsible"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:inputType="text"
                    android:imeOptions="actionDone"
                    android:hint="@string/edit_event_remove_absent_hint"/>

                <Button
                    android:id="@+id/edit_event_remove_food_responsible_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_remove"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/edit_event_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/action_cancel"/>

                <Button
                    android:id="@+id/edit_event_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/action_save"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
