<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_view_event"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="se.mathenri.bandapp.ViewEventActivity"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/view_event_content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/content_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/view_event_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/view_event_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textSize="16dp"/>

        <TextView
            android:id="@+id/view_event_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textSize="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/absent_text"
            android:layout_marginTop="60dp"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp">

            <TextView
                android:id="@+id/view_event_absent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/report_absence_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/report_absence"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:text="@string/food_responsible_list_label"/>

    </LinearLayout>

</LinearLayout>
